hexo: allow disabling of fault/exception handler

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -6,6 +6,7 @@
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_CPU
   depend CONFIG_HEXO_CONTEXT
+  depend CONFIG_HEXO_EXCEP
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86
   provide CONFIG_CPU_ARCHNAME=x86
