--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -13,6 +13,12 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_EXCEP
+  desc Processor exceptions support
+  flags auto
+  parent CONFIG_HEXO
+%config end
+
 %config CONFIG_HEXO_INTERRUPT_STACK
   desc Use a special stack for interrupts
   flags auto
