--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -126,9 +126,16 @@
 %init end
 
 
+%config CONFIG_MUTEK_FAULT_HANDLER
+  desc Install a default fault handler with verbose output
+  parent CONFIG_MUTEK
+  depend CONFIG_MUTEK_PRINTK
+  depend CONFIG_HEXO_EXCEP
+  default defined
+%config end
 
 %init INIT_MUTEK_FAULT_HANDLER
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_FAULT_HANDLER
   desc Setup a processor fault handler
   # we need cpu local variables
    after INIT_DEVICE_CPU_REGS
