--- a/examples/ble/beacon/config
+++ b/examples/ble/beacon/config
@@ -8,9 +8,10 @@ CONFIG_BLE_GATTDB_DESCRIPTOR
 
 CONFIG_LICENSE_APP_BSD
 
+CONFIG_BLE_SECURITY_DB
+
 # Libs
 CONFIG_APP_START
-CONFIG_DEVICE_PERSIST
 
 %inherit ble-peripheral
 
