printk: added a ring buffer backend with shell commands

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -286,6 +286,26 @@
   default 1
 %config end
 
+%config CONFIG_MUTEK_PRINTK_RING
+  desc Store printk output in a ring buffer
+  parent CONFIG_MUTEK_PRINTK
+  depend CONFIG_MUTEK_SHELL
+  require CONFIG_MUTEK_PRINTK_RING_SIZE>0
+%config end
+
+%config CONFIG_MUTEK_PRINTK_RING_SIZE
+  desc Specifies the size of the ring buffer used store the printk output
+  parent CONFIG_MUTEK_PRINTK_RING
+  flags value
+  default 512
+%config end
+
+%init INIT_MUTEK_PRINTK_RING
+  parent CONFIG_MUTEK_PRINTK_RING
+  during INIT_MUTEK_PRINTK
+  function printk_ring_init
+%init end
+
 ######################################################################
 #		Vmem
 
