mutek/startup: added mutekh_startup_devready

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -81,7 +81,7 @@
   after INIT_HEXO_CONTEXT
   after INIT_MUTEK_SCHEDULER_INITSMP
   before INIT_MUTEK_SCHEDULER_START
-  function mutekh_startup_nodev
+  function mutekh_startup_devready
 %init end
 
 %init INIT_CPUS
