--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -232,7 +232,7 @@
   parent CONFIG_MUTEK_PRINTK
   flags value userval
   # example: level >= LOGK_LEVEL_DEBUG || id == 'test'
-  default level >= LOGK_LEVEL_NORMAL
+  default level >= CONFIG_MUTEK_PRINTK_RUNTIME_LEVEL
 %config end
 
 %config CONFIG_MUTEK_PRINTK_RUNTIME_LEVEL
