--- a/examples/usb/acm_shell/config
+++ b/examples/usb/acm_shell/config
@@ -5,15 +5,23 @@ CONFIG_LICENSE_APP_BSD
 CONFIG_APP_START
 
 %inherit shell
-%inherit efm32-stk3600
 
 %include scripts/options.build
 %include arch/arch.build
 
-CONFIG_DRIVER_EFM32_USART_PRINTK undefined
-CONFIG_DRIVER_EFM32_I2C undefined
-CONFIG_DRIVER_USB_SYNOPSYS_EFM32
 CONFIG_DRIVER_CHAR_USBDEV_ACM
 CONFIG_MUTEK_CONSOLE_DEVICE_PATHS "acm0"
 
-CONFIG_DEVICE_CLOCK_THROTTLE
+CONFIG_MUTEK_PRINTK_COMPILE_EXPR level >= LOGK_LEVEL_NORMAL || id == 'nusb' || id == 'nclk'
+CONFIG_MUTEK_PRINTK_RUNTIME_EXPR level >= LOGK_LEVEL_NORMAL || id == 'nusb' || id == 'nclk'
+
+%section efm32-stk3600
+  CONFIG_DRIVER_EFM32_USART_PRINTK undefined
+  CONFIG_DRIVER_EFM32_I2C undefined
+  CONFIG_DRIVER_USB_SYNOPSYS_EFM32
+  CONFIG_DEVICE_CLOCK_THROTTLE
+
+%section nrf5x-pca10056
+  CONFIG_DRIVER_NRF52_USBD
+  CONFIG_DRIVER_NRF5X_CLOCK
+  CONFIG_DRIVER_NRF5X_RTC
