EFM32 family: Add UART driver with DMA

--- a/arch/efm32/drivers/usart/Makefile
+++ b/arch/efm32/drivers/usart/Makefile
@@ -1,3 +1,4 @@
 objs-$(CONFIG_DRIVER_EFM32_USART_CHAR) += usart_char.o
+objs-$(CONFIG_DRIVER_EFM32_USART_CHAR_DMA) += usart_char_dma.o
 objs-$(CONFIG_DRIVER_EFM32_USART_SPI) += usart_spi.o
 objs-$(CONFIG_DRIVER_EFM32_USART_PRINTK) += usart_printk.o
