--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -22,11 +22,31 @@
   provide CONFIG_DEVICE_START_LOG2INC=2
 %config end
 
+%config CONFIG_DRIVER_EFM32_USART_CHAR_DMA
+  desc Enable USART driver with DMA support.
+  parent CONFIG_DRIVER_EFM32_USART
+  depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DRIVER_EFR32_DMA CONFIG_DRIVER_EFM32_DMA
+  require CONFIG_DRIVER_EFM32_USART_RATE
+  suggest CONFIG_DEVICE_IRQ
+  default undefined
+%config end
+
 %config CONFIG_DRIVER_EFM32_USART_CHAR_SWFIFO
   desc Size of the additional software FIFOs. 0 disables software FIFOs.
   parent CONFIG_DRIVER_EFM32_USART_CHAR
   flags value
   default 0
+%config end
+
+%config CONFIG_DRIVER_EFM32_USART_CHAR_USE_SWFIFO
+  desc Internal token for deps
+  parent CONFIG_DRIVER_EFM32_USART_CHAR
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_SLEEP
+  suggest CONFIG_DEVICE_VALIO_UART_CONFIG
+  when CONFIG_DRIVER_EFM32_USART_CHAR_SWFIFO>0
 %config end
 
 %config CONFIG_DRIVER_EFM32_USART_SPI
@@ -74,9 +94,24 @@
   function efm32_usart_printk_init
 %init end
 
+%config CONFIG_DRIVER_EFM32_USART_CHAR_DMA_FIFO_SIZE
+  desc Size of the buffer used for DMA.
+  parent CONFIG_DRIVER_EFM32_USART_CHAR_DMA
+  flags value
+  default 512
+%config end
+
+%config CONFIG_DRIVER_EFM32_USART_CHAR_DMA_TIMEOUT_SYMBOL
+  desc Timeout value in symbol number depending on bitrate
+  parent CONFIG_DRIVER_EFM32_USART_CHAR_DMA
+  flags value
+  default 256
+%config end
+
 %config CONFIG_DRIVER_EFM32_USART_DMA_THRD
   desc DMA will be used for transfer if size is greater than or equal to this value.
-  parent CONFIG_DRIVER_EFM32_DMA
+  parent CONFIG_DRIVER_EFM32_USART
   flags value
   default 2
 %config end
+
