--- a/examples/usb/serial_port/config
+++ b/examples/usb/serial_port/config
@@ -9,11 +9,22 @@ CONFIG_APP_START
 %include scripts/options.build
 %include arch/arch.build
 
+%subsection dma
+  CONFIG_DRIVER_EFM32_USART_CHAR
+  CONFIG_DRIVER_EFM32_DMA
+  CONFIG_DRIVER_EFM32_USART_CHAR_DMA
+  CONFIG_DRIVER_EFM32_RTC
+  CONFIG_DRIVER_EFM32_USART_CHAR_DMA_TIMEOUT_SYMBOL 64
+  CONFIG_DRIVER_EFM32_USART_DMA_THRD 256
+%else
+  CONFIG_DRIVER_EFM32_USART_CHAR_DMA undefined
+  CONFIG_DRIVER_EFM32_USART_CHAR_SWFIFO 128
+%end
+
 CONFIG_DRIVER_EFM32_USART_PRINTK undefined
-CONFIG_DRIVER_EFM32_USART_SPI undefined
-CONFIG_DRIVER_EFM32_USART_CHAR_SWFIFO 64
-CONFIG_DRIVER_EFM32_USART_CHAR_DMA undefined
 CONFIG_DRIVER_EFM32_I2C undefined
+CONFIG_DRIVER_EFM32_USART_SPI undefined
+
 CONFIG_DRIVER_USB_SYNOPSYS_EFM32
 CONFIG_DRIVER_CHAR_USBDEV_ACM
 CONFIG_DRIVER_UART_FORWARDER
@@ -22,4 +33,6 @@ CONFIG_DEVICE_VALIO_UART_CONFIG
 
 CONFIG_DEVICE_CLOCK_THROTTLE
 
-CONFIG_DRIVER_RTT_PRINTK
+%subsection printk-rtt
+  CONFIG_DRIVER_RTT_PRINTK
+%end
