efm32: added an hardware random seed driver

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -13,3 +13,4 @@ subdirs-$(CONFIG_DRIVER_EFR32_DMA) += ldma
 subdirs-$(CONFIG_DRIVER_EFM32_ADC) += adc
 subdirs-$(CONFIG_DRIVER_EFM32_BITBANG) += bitbang
 subdirs-$(CONFIG_DRIVER_EFR32_RADIO) += radio
+subdirs-$(CONFIG_DRIVER_EFM32_HWRAND) += hwrand
