printk/ring: added missing config provide

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -290,6 +290,7 @@
   desc Store printk output in a ring buffer
   parent CONFIG_MUTEK_PRINTK
   depend CONFIG_MUTEK_SHELL
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   require CONFIG_MUTEK_PRINTK_RING_SIZE>0
 %config end
 
