libdevice: add SHELL_MEM token

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -613,6 +613,13 @@
   desc Enable timer command in shell
 %config end
 
+%config CONFIG_DEVICE_SHELL_MEM
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_MEM
+  default defined
+  desc Enable mem command in shell
+%config end
+
 %config CONFIG_DEVICE_SHELL_RFPACKET
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_RFPACKET
