--- a/drivers/rfpacket/si446x/si446x.config
+++ b/drivers/rfpacket/si446x/si446x.config
@@ -91,3 +91,7 @@
   default defined
 %config end
 
+%config CONFIG_DRIVER_RFPACKET_SI446X_TCXO
+  desc Configure the SI446X to use a TCXO instead of a XTAL
+  parent CONFIG_DRIVER_RFPACKET_SI446X
+%config end
