efm32: properly report reset cause on EFM family

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -70,3 +70,9 @@
   condition CONFIG_EFM32_BOARD_INIT
 %init end
 
+%init INIT_EFM32_RESET_CAUSE
+  parent CONFIG_ARCH_EFM32
+  during INIT_BOOTSTRAP
+  before INIT_DEVICE
+  function efm32_copy_reset_cause
+%init end
