shell: added the auto config flag on shell buffers

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -203,6 +203,7 @@
 %init end
 
 %config CONFIG_MUTEK_SHELL_BUFFER
+  flags auto
   parent CONFIG_MUTEK_SHELL
   depend CONFIG_MUTEK_MEMALLOC_SMART
   desc Enable management of named buffers in shell context
