libdevice: added the auto flag to some bytecode tokens

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -276,8 +276,7 @@
 
 %config CONFIG_DEVICE_SPI_REQUEST
   parent CONFIG_DEVICE
-  when CONFIG_DEVICE_SPI_TRANSACTION
-  when CONFIG_DEVICE_SPI_BYTECODE
+  flags auto
   desc Enable SPI request scheduler
 %config end
 
@@ -296,6 +295,7 @@
 
 %config CONFIG_DEVICE_SPI_TRANSACTION
   parent CONFIG_DEVICE_SPI
+  flags auto
   depend CONFIG_DEVICE_SPI_REQUEST
   depend CONFIG_MUTEK_KROUTINE_SCHED
   flags auto
@@ -304,6 +304,7 @@
 
 %config CONFIG_DEVICE_SPI_BYTECODE
   parent CONFIG_DEVICE_SPI
+  flags auto
   depend CONFIG_DEVICE_SPI_REQUEST
   depend CONFIG_MUTEK_BYTECODE
   depend CONFIG_MUTEK_KROUTINE_SCHED
@@ -313,6 +314,7 @@
 
 %config CONFIG_DEVICE_SPI_BYTECODE_TIMER
   parent CONFIG_DEVICE_SPI_BYTECODE
+  flags auto
   depend CONFIG_DEVICE_TIMER
   flags auto
   desc Enable time handling in SPI bytecode
@@ -320,6 +322,7 @@
 
 %config CONFIG_DEVICE_SPI_BYTECODE_GPIO
   parent CONFIG_DEVICE_SPI_BYTECODE
+  flags auto
   depend CONFIG_DEVICE_GPIO
   flags auto
   desc Enable GPIO access from SPI bytecode
