driver/si446x: added support for AFC bandwidth narrowing

--- a/drivers/rfpacket/si446x/si446x.config
+++ b/drivers/rfpacket/si446x/si446x.config
@@ -77,6 +77,12 @@
   default defined
 %config end
 
+%config CONFIG_DRIVER_RFPACKET_SI446X_AFCBD
+  desc Enable AFC bandwidth narrowing
+  parent CONFIG_DRIVER_RFPACKET_SI446X_AFC
+  default defined
+%config end
+
 %config CONFIG_DRIVER_RFPACKET_SI446X_SPI_BITRATE
   desc SI446X spi clock speed
   parent CONFIG_DRIVER_RFPACKET_SI446X
