--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -74,6 +74,10 @@
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c800 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG1
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010400 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG1
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG12
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010400 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG12
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010800 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG12
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010c00 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG12
 %config end
 
 %config CONFIG_DRIVER_EFM32_USART_PRINTK_PIN
