cpu/arm32m: added the CONFIG_CPU_ARM32M_BARE_BOOT

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -179,6 +179,11 @@
   default 32
 %config end
 
+%config CONFIG_CPU_ARM32M_BARE_BOOT
+  desc Output executable code in the reset vector instead
+  desc of the standard ARM header containing the stack pointer.
+  parent CONFIG_CPU_ARM32M
+%config end
 
 # Trace global enable
 
