stm32: forbide use of device clock

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -5,6 +5,7 @@
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=stm32
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
+  exclude CONFIG_DEVICE_CLOCK
   require CONFIG_STM32_SERIES
   require CONFIG_STM32_FAMILY
   require CONFIG_STM32_AHBRAMSIZE
