libdevice: shell tokens do not pull device classes tokens

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -612,70 +612,70 @@
 %config CONFIG_DEVICE_SHELL_TIMER
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_TIMER
-  default defined
+  when CONFIG_DEVICE_TIMER
   desc Enable timer command in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_MEM
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_MEM
-  default defined
+  when CONFIG_DEVICE_MEM
   desc Enable mem command in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_RFPACKET
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_RFPACKET
+  when CONFIG_DEVICE_RFPACKET
   depend CONFIG_MUTEK_SHELL_BUFFER
-  default defined
   desc Enable rfpacket commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_CHAR
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_CHAR
-  default defined
+  when CONFIG_DEVICE_CHAR
   desc Enable char commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_SPI
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_SPI
-  default defined
+  when CONFIG_DEVICE_SPI
   desc Enable spi commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_CLOCK
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_CLOCK
-  default defined
+  when CONFIG_DEVICE_CLOCK
   desc Enable clock commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_GPIO
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_GPIO
-  default defined
+  when CONFIG_DEVICE_GPIO
   desc Enable gpio commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_I2C
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_I2C
-  default defined
+  when CONFIG_DEVICE_I2C
   desc Enable i2c commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_PWM
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_PWM
-  default defined
+  when CONFIG_DEVICE_PWM
   desc Enable pwm commands in shell
 %config end
 
 %config CONFIG_DEVICE_SHELL_CRYPTO
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_CRYPTO
-  default defined
+  when CONFIG_DEVICE_CRYPTO
   desc Enable cryto commands in shell
 %config end
