driver: missing dep on CONFIG_DEVICE_SLEEP

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -155,6 +155,7 @@
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_I2C
   depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_SLEEP
 %config end
 
 # RTC
