libgfx: include in mkdoc

--- a/libgfx/gfx.config
+++ b/libgfx/gfx.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_GFX
   desc Enable 2d graphic library
-  module libgfx Libraries::Gfx Lightweight 2d graphic library
+  module libgfx Libraries::Lightweight 2d graphic
   flags auto
 %config end
 
