libdevice: dropped busy wait device request wrappers

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -167,6 +167,7 @@
 %config CONFIG_DEVICE_SHELL
   parent CONFIG_DEVICE
   depend CONFIG_MUTEK_SHELL
+  depend CONFIG_MUTEK_CONTEXT_SCHED
   when CONFIG_MUTEK_SHELL
   desc Enable device related commands in the shell
 %config end
