efm32/leuart: add CLOCK token for leuart_printk

--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -28,6 +28,13 @@
   default 0
 %config end
 
+%config CONFIG_DRIVER_EFM32_LEUART_CLOCK
+  desc Clock frequency use by the leuart
+  parent CONFIG_DRIVER_EFM32_LEUART_PRINTK
+  flags value
+  default 32768
+%config end
+
 %config CONFIG_DRIVER_EFM32_LEUART_PRINTK
   desc Enable EFM32 Low Energy UART printk handler
   parent CONFIG_DRIVER_EFM32_LEUART
