efm32/gpio: add DRIVE_STRENGH for each gpio bank

--- a/arch/efm32/drivers/gpio/gpio.config
+++ b/arch/efm32/drivers/gpio/gpio.config
@@ -30,3 +30,9 @@
   flags value
 %config end
 
+%config CONFIG_DRIVER_EFM32_GPIO_DRIVE_STRENGH
+  parent CONFIG_DRIVER_EFM32_GPIO
+  desc Set drive strengh for each gpio port
+  default 0x0
+  flags value
+%config end
