mutek/shell: added CONFIG_MUTEK_SHELL_MEM

--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -6,7 +6,8 @@ objs += startup.o kroutine.o
 objs-$(CONFIG_MUTEK_FAULT_HANDLER) += fault.o
 objs-$(CONFIG_MUTEK_MEMALLOC) += mem_alloc.o
 objs-$(CONFIG_MUTEK_CONSOLE) += console.o
-objs-$(CONFIG_MUTEK_SHELL) += shell.o shell_mem.o shell_buffer.o
+objs-$(CONFIG_MUTEK_SHELL) += shell.o shell_buffer.o
+objs-$(CONFIG_MUTEK_SHELL_MEM) += shell_mem.o
 objs-$(CONFIG_MUTEK_MEM_REGION) += mem_region.o
 objs-$(CONFIG_MUTEK_MEMALLOC_SMART) += memory_allocator_smart.o
 objs-$(CONFIG_MUTEK_MEMALLOC_SIMPLE) += memory_allocator_simple.o
