--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -209,6 +209,13 @@
   desc Enable management of named buffers in shell context
 %config end
 
+%config CONFIG_MUTEK_SHELL_MEM
+  flags auto
+  parent CONFIG_MUTEK_SHELL
+  desc Enable memory ops commands in shell
+  default defined
+%config end
+
 %config CONFIG_MUTEK_LOGO
   desc Add builtin MutekH logo bitmap to the kernel
   parent CONFIG_MUTEK
