libpersist: read/write operations can be configured to use RAM as backend rather than flash

--- a/libpersist/persist.config
+++ b/libpersist/persist.config
@@ -1,6 +1,17 @@
-
 %config CONFIG_PERSIST
   desc Provide support for persitent storage of values in flash memory
   flags auto
   module libpersist Libraries::Persistent configuration service
+%config end
+
+%config CONFIG_PERSIST_RAM_BACKEND
+  desc Change persist backend to ram simulating flash write/erase
+  flags auto
+  depend CONFIG_PERSIST
+%config end
+
+%config CONFIG_PERSIST_RAM_BACKEND_PAGESIZE
+  desc Set page size for the compiled test, default is 0x1000
+  flags auto
+  depend CONFIG_PERSIST_RAM_BACKEND
 %config end
