nrf5x/usbd: Update driver for PS 1.0 Update support to latest chip hw revision and erratas

--- a/examples/usb/acm_shell/config
+++ b/examples/usb/acm_shell/config
@@ -5,7 +5,6 @@ CONFIG_LICENSE_APP_BSD
 CONFIG_APP_START
 
 %inherit shell
-%inherit efm32-stk3600
 
 %include scripts/options.build
 %include arch/arch.build
@@ -14,6 +13,11 @@ CONFIG_APP_START
   CONFIG_DRIVER_EFM32_USART_PRINTK undefined
   CONFIG_DRIVER_USB_SYNOPSYS_EFM32
   CONFIG_DEVICE_CLOCK_THROTTLE
+%end
+%subsection nrf5x-pca10056
+  CONFIG_DRIVER_NRF52_USBD
+  CONFIG_DRIVER_NRF5X_CLOCK
+  CONFIG_DRIVER_NRF5X_RTC
 %end
 
 CONFIG_DRIVER_CHAR_USBDEV_ACM
