libpersist: fixed .config

--- a/libpersist/persist.config
+++ b/libpersist/persist.config
@@ -5,13 +5,14 @@
 %config end
 
 %config CONFIG_PERSIST_RAM_BACKEND
+  parent CONFIG_PERSIST
   desc Change persist backend to ram simulating flash write/erase
-  flags auto
-  depend CONFIG_PERSIST
+  require CONFIG_PERSIST_RAM_BACKEND_PAGESIZE
 %config end
 
 %config CONFIG_PERSIST_RAM_BACKEND_PAGESIZE
-  desc Set page size for the compiled test, default is 0x1000
-  flags auto
-  depend CONFIG_PERSIST_RAM_BACKEND
+  parent CONFIG_PERSIST
+  desc Set page size for the compiled test
+  flags value
+  default 0x1000
 %config end
