drivers/usb/dfu_class: Remove backing storage subset, use partition instead

--- a/examples/usb/dfu/bootloader/config
+++ b/examples/usb/dfu/bootloader/config
@@ -9,6 +9,7 @@ CONFIG_APP_START
 
 CONFIG_DRIVER_USBDEV_DFU_CLASS
 CONFIG_DRIVER_USBDEV_DFU_DFU
+CONFIG_DRIVER_MEM_PARTITION
 CONFIG_USBDEV_DEFAULT_DEVICE_INFO undefined
 CONFIG_LIBC_STRING_SMALL
 
