driver/si446x: support low duty cycle RX

--- a/drivers/rfpacket/si446x/si446x.config
+++ b/drivers/rfpacket/si446x/si446x.config
@@ -97,6 +97,11 @@
   default defined
 %config end
 
+%config CONFIG_DRIVER_RFPACKET_SI446X_WUT
+  desc SI446X wakeup timer and low duty cycle RX
+  parent CONFIG_DRIVER_RFPACKET_SI446X
+%config end
+
 %config CONFIG_DRIVER_RFPACKET_SI446X_TCXO
   desc Configure the SI446X to use a TCXO instead of a XTAL
   parent CONFIG_DRIVER_RFPACKET_SI446X
