mutek/logk: added CONFIG_MUTEK_PRINTK_COLOR

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -258,6 +258,11 @@
   default (!backend_id || backend_id == id) && level >= backend_level
 %config end
 
+%config CONFIG_MUTEK_PRINTK_COLOR
+  desc Enable use of ANSI color in logk
+  parent CONFIG_MUTEK_PRINTK
+%config end
+
 %config CONFIG_MUTEK_PRINTK_HANDLER
   desc An implementation for printk output exists
   parent CONFIG_MUTEK_PRINTK
