libc: enable/disable assert() using LOGK_MODULE_ID

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -16,6 +16,14 @@
   parent CONFIG_LIBC
 %config end
 
+%config CONFIG_LIBC_ASSERT_FILTER_EXPR
+  desc Enable or disable assert based on module ID
+  # example: id == 'mutk' || id == 'dev '
+  flags value
+  parent CONFIG_LIBC_ASSERT
+  default 1
+%config end
+
 %config CONFIG_LIBC_ASSERT_SIMPLE
   desc Only retains execution pointer of the failing assertion
   parent CONFIG_LIBC_ASSERT
