allow setting the fault/assert/abort finish function call using the CONFIG_MUTEK_FAULT_FINISH config token

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -129,7 +129,6 @@
 %config CONFIG_MUTEK_FAULT_HANDLER
   desc Install a default fault handler with verbose output
   parent CONFIG_MUTEK
-  depend CONFIG_MUTEK_PRINTK
   depend CONFIG_HEXO_EXCEP
   default defined
 %config end
@@ -143,7 +142,12 @@
   function mutek_fault_initsmp
 %init end
 
-
+%config CONFIG_MUTEK_FAULT_FINISH
+  desc void function called on abort, assert fail and cpu fault.
+  parent CONFIG_MUTEK
+  flags value
+  default mutek_startup_halt
+%config end
 
 %config CONFIG_MUTEK_CONSOLE
   desc Enable console based on a char device driver.
