--- a/drivers/mem/Makefile
+++ b/drivers/mem/Makefile
@@ -2,5 +2,6 @@ subdirs-$(CONFIG_DRIVER_MEM_RAM) += ram
 subdirs-$(CONFIG_DRIVER_MEM_I2C_EEPROM) += i2c_eeprom
 subdirs-$(CONFIG_DRIVER_MEM_SD1306) += sd1306
 subdirs-$(CONFIG_DRIVER_NTAG_I2C) += ntag_i2c
+subdirs-$(CONFIG_DRIVER_MEM_CHAR) += mem_char
 subdirs-$(CONFIG_DRIVER_MEM_PARTITION) += partition
 subdirs-$(CONFIG_DRIVER_MEM_SPI_FLASH) += spi_flash
