libpersist: fix parent in config

--- a/libpersist/persist.config
+++ b/libpersist/persist.config
@@ -11,7 +11,7 @@
 %config end
 
 %config CONFIG_PERSIST_RAM_BACKEND_PAGESIZE
-  parent CONFIG_PERSIST
+  parent CONFIG_PERSIST_RAM_BACKEND
   desc Set page size for the compiled test
   flags value
   default 0x1000
