--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -16,6 +16,18 @@
   parent CONFIG_LIBTERMUI
 %config end
 
+%config CONFIG_LIBTERMUI_GETLINE_HISTORY
+  desc Enable getline history
+  parent CONFIG_LIBTERMUI_GETLINE
+  default defined
+%config end
+
+%config CONFIG_LIBTERMUI_GETLINE_PASTEBUF
+  desc Enable getline paste buffer
+  parent CONFIG_LIBTERMUI_GETLINE
+  default defined
+%config end
+
 %config CONFIG_LIBTERMUI_CONSOLE
   desc Enable libtermui console user interface feature
   parent CONFIG_LIBTERMUI
@@ -60,13 +72,6 @@
   flags value
 %config end
 
-%config CONFIG_LIBTERMUI_CON_MAXLINELEN
-  desc Console line buffer size
-  default 512
-  parent CONFIG_LIBTERMUI_CONSOLE
-  flags value
-%config end
-
 %config CONFIG_LIBTERMUI_CON_MAXARGS
   desc Console max number of command arguments
   default 32
@@ -79,17 +84,4 @@
   default 29
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
-%config end
-
-%config CONFIG_LIBTERMUI_GETLINE_HISTORY
-  desc Console number of history entries
-  default 4
-  parent CONFIG_LIBTERMUI_CONSOLE
-  flags value
-%config end
-
-%config CONFIG_LIBTERMUI_GETLINE_PASTEBUF
-  desc Enable getline paste buffer
-  parent CONFIG_LIBTERMUI_CONSOLE
-  default defined
 %config end
