--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -199,6 +199,20 @@
   default "[#31;mutek#;] "
 %config end
 
+%config CONFIG_MUTEK_SHELL_LINE_SIZE
+  parent CONFIG_MUTEK_SHELL
+  desc Define the shell max line size
+  flags value
+  default 256
+%config end
+
+%config CONFIG_MUTEK_SHELL_BUF_SIZE
+  parent CONFIG_MUTEK_SHELL
+  desc Define the size of the shell history buffer
+  flags value
+  default 1024
+%config end
+
 %init INIT_MUTEK_SHELL_THREAD
   parent CONFIG_MUTEK_SHELL_THREAD
   during INIT_DEVREADY
