efm32: allow room before and after firmware image

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -32,6 +32,20 @@
   flags value
 %config end
 
+%config CONFIG_EFM32_FW_HEADER
+  desc Amount of ununsed flash before the firmware image
+  parent CONFIG_ARCH_EFM32
+  flags value
+  default 0
+%config end
+
+%config CONFIG_EFM32_FW_FOOTER
+  desc Amount of ununsed flash after the firmware image
+  parent CONFIG_ARCH_EFM32
+  flags value
+  default 0
+%config end
+
 %config CONFIG_EFM32_FAMILY
   desc Specifies the microcontroller Gecko family. see include/arch/efm32/chips.h
   parent CONFIG_ARCH_EFM32
